UMUS-74: Prevent Drupal pager styles from bleeding in

--- a/react-search/src/components/results/_pagination.scss
+++ b/react-search/src/components/results/_pagination.scss
@@ -4,8 +4,11 @@
  *
  * @copyright Copyright (c) 2017 Palantir.net
  */
+.search-pager {
+  background-color: transparent;
+}
 
-.pager__items {
+.search-pager__items {
   @extend %list--simple;
   display: flex;
   align-items: center;
@@ -24,7 +27,7 @@
 }
 
 // Pager list item styles
-.pager__item {
+.search-pager__item {
   display: inline-block;
   cursor: pointer;
 
